# Intelligent-Scissor

./: CMakeLists.txt  Find_Cost.m  README.md  iscissor.html  main.cpp  minPath.cpp  seed2des.cpp  seed2des.h
